--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Udacity Capstone Project</h1>
+    <h1>Udacity Capstone Project v2</h1>
 </body>
 </html>
